--- a/public/home/index.html
+++ b/public/home/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 	<!-- Insert Jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
@@ -27,36 +33,38 @@
 	 <!-- Image Hyperlink to PRPSFL.com -->
     <div >
       <a href="https://www.prpsfl.com/">
-        <img id="logo" src="logo.png" class="img-fluid" alt="Responsive image">
+        <img id="logo" src="assets/logo.png" class="img-fluid" alt="Responsive image">
       </a>
 
       <a href="#" onclick="btnLogOut()">
-      	<img id="logout"  src="assets/sign-out-option.png" class="img-fluid" alt="Responsive image">
+      	<img id="btnLogOutLogo"  src="assets/sign-out-option.png" class="img-fluid" alt="Responsive image">
      	<p id="logoutText">Log out</p>
       </a>
       
     </div>
    
     	<!-- cards -->
-    	<div  class="flex-container">
+    	<div  class="d-flex flex-column flex-md-row">
 
 		  <div>
 		  	 <a href="#" onclick="getReport()" id="link">
-		       <img id="rectangle1" src="Download.jpeg" class="img-fluid" alt="Responsive image">	
+		       <img id="rectangle1" src="assets/Download.jpeg" class="img-fluid" alt="Responsive image">	
 		    </a>	
 		  </div>
+
 
 
 		  <div>
 		  	 <a href="#" onclick="getSurvey()">
-		      <img id="rectangle2"  src="Survey.jpeg" class="img-fluid" alt="Responsive image">		
+		      <img id="rectangle2"  src="assets/Survey.jpeg" class="img-fluid" alt="Responsive image">		
 		    </a>	
 		  </div>
 
 
+
 		  <div>
 		  	 <a onclick="toDatabase()" href="profile.html">
-		       	<img id="rectangle3" src="UserPic.jpeg" class="img-fluid" alt="Responsive image">		
+		       	<img id="rectangle3" src="assets/UserPic.jpeg" class="img-fluid" alt="Responsive image">		
 		    </a>	
 		  </div>
 		  
@@ -65,5 +73,10 @@
 	<script src="app.js"></script>
 
 
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
