--- a/public/home/Profile/index.html
+++ b/public/home/Profile/index.html
@@ -39,6 +39,10 @@
          <p id="btnLogOutText">Log out</p>
       </a>
   </div>
+
+  <div style="margin-left: 100px; margin-top: 628px">
+     <h3>*****Click "See my details" to see the data PRPSFL holds on you*****</h3>
+  </div>
       
 
 
@@ -60,13 +64,7 @@
     </span>
 
 
-
-
-
-
  <img  id="comPrefLogo" src="assets/Preferred Comm.png" class="img-fluid" alt="Responsive image"> 
-
-
 
 
  <span  id="comPrefText" >
